--- a/front/src/app/component/recipes/recipes.component.html
+++ b/front/src/app/component/recipes/recipes.component.html
@@ -1,1 +1,61 @@
-<p>recipes works!</p>
+<section>
+    <div class="w-50 m-auto">
+        <div>
+            <h1 class="text-center">All Recipes</h1>
+        </div>
+        <div>
+            <p class="text-center fw-bold">Food brings us together, We make it easy to create delicious moments. Every great meal begins with a single recipe, let’s find yours!</p>
+        </div>
+    </div>
+</section>
+<section class="m-3">
+    <div class="container w-50 mt-5 rounded" style="background-color: #F5DADF;">
+        <div class="p-2">
+            <h5 style="font-family: var(--main-font); font-weight: 600;">sub Categories</h5>
+        </div>
+        <div  class="d-flex justify-content-center p-2 w-100">
+            <h6 class="p-2 bg-light m-2 rounded"*ngFor="let item of items; let i = index" style="color: #de5d83;">recipes</h6>
+        </div>
+    </div>
+</section>
+<section class="background">
+    <div class="container d-flex flex-column w-80">
+        <div class="d-flex justify-content-between border-bottom border-1 media ">
+            <div>
+                <h1>Categories</h1>
+            </div>
+            <div class="d-flex align-items-center">
+                <a href="#" class="text-decoration-none fs-5 color p-1 m-1">BreakFast</a>
+                <a href="#" class="text-decoration-none fs-5 color p-1 m-1">Lunch</a>
+                <a href="#" class="text-decoration-none fs-5 color p-1 m-1">Dinner</a>
+            </div>
+        </div>
+        <div class="row gx-3 mt-3">
+            <div class="col-lg-3 col-md-6 col-sm-12 white " *ngFor="let item of items; let i = index">
+                <div>
+                    <img class="w-100 mt-2" src="https://www.simplyrecipes.com/thmb/AgGSd6GxVsW9D8fmNSWyRjLApQU=/300x225/filters:no_upscale():max_bytes(150000):strip_icc()/Simply-Recipes-DIY-Macaroni-Cheese-LEAD-02-0fc3a4f066b84febb5dcf6a697eb2a0b.jpg" alt="food">
+                </div>
+                <div>
+                    <p class="red">Dinner</p>
+                </div>
+                <div>
+                    <h1 class="fs-3">Homemade Macaroni and Cheese Mix</h1>
+                </div>
+                <div class="d-flex justify-content-between">
+                    <div class="d-flex">
+                        <i class="fa fa-clock-o" style="font-size:24px"></i>
+                        <p class="inline-block px-2" style="color: #666;">20 mins</p>
+                    </div>
+                    <div>
+                        <i class="fa fa-star-o" style="font-size:24px"></i>
+                        <i class="fa fa-star-o" style="font-size:24px"></i>
+                        <i class="fa fa-star-o" style="font-size:24px"></i>
+                        <i class="fa fa-star-o" style="font-size:24px"></i>
+                        <i class="fa fa-star-o" style="font-size:24px"></i>
+                    </div>
+                </div>
+                
+            </div>
+        </div>
+    </div>
+</section>
