installed bootstrap to project

--- a/front/src/app/component/single-recipe/single-recipe.component.html
+++ b/front/src/app/component/single-recipe/single-recipe.component.html
@@ -1,5 +1,5 @@
 <p>single-recipe works!</p>
-<h1>{{ recipe.image }}</h1>
-<h1>{{ recipe.name }}</h1>
-<h1>{{ recipe.description }}</h1>
+<p>image: {{ recipe.image }}</p>
+<p>name: {{ recipe.name }}</p>
+<p>description: {{ recipe.description }}</p>
 
