--- a/front/src/app/component/single-recipe/single-recipe.component.css
+++ b/front/src/app/component/single-recipe/single-recipe.component.css
@@ -10,7 +10,7 @@ h1,h2,h3,h4,h5,p{
 
 /* recipe hero ========================= */
 .recipe-title{
-  font: var(--main-font);
+  font-family: var(--main-font);
   font-size: 60px;
   font-weight: bold;
   color: var(--main-color);
@@ -18,26 +18,26 @@ h1,h2,h3,h4,h5,p{
 }
 
 .recipe-description {
-  font: var(--second-font);
+  font-family: var(--second-font);
   color: var(--second-color);
   font-size: 14px;
 }
 
 /* recipe how to ========================= */
 .how-to .title {
-  font: var(--main-font);
+  font-family: var(--main-font);
   font-size: 18px;
   font-weight: 800;
 }
 
 .how-to .body{
-  font: var(--second-font);
+  font-family: var(--second-font);
   font-size: 16px;
 }
 
 /* related recipes ========================= */
 .related-recipes .title{
-  font: var(--main-font);
+  font-family: var(--main-font);
   font-size: 28px;
   font-weight: 800;
 }
