--- a/front/src/app/component/single-recipe/single-recipe.component.css
+++ b/front/src/app/component/single-recipe/single-recipe.component.css
@@ -19,7 +19,7 @@ h1,h2,h3,h4,h5,p{
 
 .recipe-description {
   font-family: var(--second-font);
-  color: var(--second-color);
+  color: var(--main-color);
   font-size: 14px;
 }
 
@@ -42,10 +42,11 @@ h1,h2,h3,h4,h5,p{
   font-weight: 800;
 }
 
-.related-recipes .body .card {
-  border: none;
-}
+/* .related-recipes .body .card-wrapper {
+  width: 10px;
+} */
 
 .related-recipes .card-title{
   font-size: 16px;
+  font-family: var(--main-font);
 }
