--- a/front/src/app/component/recipes/recipes.component.html
+++ b/front/src/app/component/recipes/recipes.component.html
@@ -1,5 +1,5 @@
 <section>
-    <div class="w-50 m-auto">
+    <div class="w-50 m-auto pink-div" >
         <div>
             <h1 class="text-center">All Recipes</h1>
         </div>
@@ -8,8 +8,8 @@
         </div>
     </div>
 </section>
-<section class="m-3">
-    <div class="container w-50 mt-5 rounded" style="background-color: #F5DADF;">
+<!-- <section class="m-3">
+    <div class="container w-50 mt-5 rounded" >
         <div class="p-2">
             <h5 style="font-family: var(--main-font); font-weight: 600;">sub Categories</h5>
         </div>
@@ -17,41 +17,111 @@
             <h6 class="p-2 bg-light m-2 rounded"*ngFor="let item of items; let i = index" style="color: #de5d83;">recipes</h6>
         </div>
     </div>
-</section>
-<section class="background">
-    <div class="container d-flex flex-column w-80">
-        <div class="d-flex justify-content-between border-bottom border-1 media ">
-            <div>
-                <h1>Categories</h1>
-            </div>
-            <div class="d-flex align-items-center">
-                <a href="#" class="text-decoration-none fs-5 color p-1 m-1">BreakFast</a>
-                <a href="#" class="text-decoration-none fs-5 color p-1 m-1">Lunch</a>
-                <a href="#" class="text-decoration-none fs-5 color p-1 m-1">Dinner</a>
-            </div>
+</section> -->
+<section class="m-3">
+    <div class=" row d-flex justify-content-center align-items-center smaller-div">
+        <div class=" col-lg-2 col-md-3 col-sm-12 background py-2 px-5 mx-2 smaller-div d-flex flex-column  justify-content-center align-items-center">
+
+            <img src="assets/img/croissant.png" alt="BreakFast"  class="img-fluid">
+            <a href="#" class="text-decoration-none fs-5 color p-1 m-1 align-middle">BreakFast</a>
         </div>
+        <div class=" col-lg-2 col-md-3 col-sm-12 background py-2 px-5 mx-2 smaller-div d-flex flex-column  justify-content-center align-items-center">
+            <img src="assets/img/salad.png" alt="Lunch"  class="img-fluid">
+            <a href="#" class="text-decoration-none fs-5 color p-1 m-1 align-middle">Lunch</a>
+        </div>
+        <div class="col-lg-2 col-md-3 col-sm-12 background py-2 px-5 mx-2  smaller-div d-flex flex-column  justify-content-center align-items-center">
+            <img src="assets/img/dinner.png" alt="Dinner"  class="img-fluid">
+            <a href="#" class="text-decoration-none fs-5 color p-1 m-1 align-middle">Dinner</a>
+        </div>
+        
+    </div>
+</section>
+<section >
+    <div class="d-flex justify-content-center smaller-div w-25 m-auto">
+        <div class="d-flex flex-column justify-content-center align-items-center smaller-div m-2">
+            <div class="dropdown d-flex flex-column" >
+                <button (click)="toggleDropdown()" class="btn pink-btn">Sub-Category 
+                    <img src="assets/img/filter-svgrepo-com.svg" alt="" class="filter">
+                    
+                </button>
+                <div class="dropdown-content" *ngIf="dropdownOpen" >
+                  <div *ngFor="let option of options" class="background m-2">
+                    <label>
+                      <input type="checkbox" [checked]="option.selected" (change)="toggleOption(option)" />
+                      {{ option.name }}
+                    </label>
+                  </div>
+                </div>
+            </div>
+              
+              <div>
+                <ul>
+                  <li *ngFor="let option of getSelectedOptions()">{{ option.name }}</li>
+                </ul>
+             </div>
+        </div>
+        <div class="d-flex flex-column justify-content-center align-items-center smaller-div  m-2">
+            <div class="dropdown d-flex flex-column">
+                <button (click)="toggleDropdown2()" class="btn pink-btn">Ingredients
+                    <img src="assets/img/filter-svgrepo-com.svg" alt="" class="filter">
+                </button>
+                <div class="dropdown-content" *ngIf="dropdown2Open" >
+                  <div *ngFor="let option of options2" class="background m-2">
+                    <label >
+                      <input type="checkbox" [checked]="option.selected" (change)="toggleOption2(option)"  />
+                      {{ option.name }}
+                    </label>
+                  </div>
+                </div>
+            </div>
+              
+              <div>
+                <ul>
+                  <li *ngFor="let option of getSelectedOptions2()">{{ option.name }}</li>
+                </ul>
+             </div>
+        </div>
+        <div class="d-flex flex-column justify-content-center align-items-center smaller-div m-2">
+            <div class="dropdown d-flex flex-column">
+                <button (click)="toggleDropdown3()" class="btn pink-btn">Time
+                    <img src="assets/img/clock-two-svgrepo-com.svg" alt="" class="filter2">
+                    
+                </button>
+                <div class="dropdown-content" *ngIf="dropdown3Open">
+                  <div *ngFor="let option of options3" class="background m-2">
+                    <label>
+                      <input type="radio" [checked]="option.selected" (change)="toggleOption3(option)" />
+                      {{ option.name }}
+                    </label>
+                  </div>
+                </div>
+            </div>
+              
+              <div>
+                <ul>
+                  <li *ngFor="let option of getSelectedOptions3()">{{ option.name }}</li>
+                </ul>
+             </div>
+        </div>
+    </div>
+</section>
+<section >
+    <div class="container d-flex flex-column w-80">
         <div class="row gx-3 mt-3">
             <div class="col-lg-3 col-md-6 col-sm-12 white " *ngFor="let item of items; let i = index">
-                <div>
-                    <img class="w-100 mt-2" src="https://www.simplyrecipes.com/thmb/AgGSd6GxVsW9D8fmNSWyRjLApQU=/300x225/filters:no_upscale():max_bytes(150000):strip_icc()/Simply-Recipes-DIY-Macaroni-Cheese-LEAD-02-0fc3a4f066b84febb5dcf6a697eb2a0b.jpg" alt="food">
+                <div class=" inline-block  ">
+                    <img class="w-100  rounded-image" src="https://www.simplyrecipes.com/thmb/AgGSd6GxVsW9D8fmNSWyRjLApQU=/300x225/filters:no_upscale():max_bytes(150000):strip_icc()/Simply-Recipes-DIY-Macaroni-Cheese-LEAD-02-0fc3a4f066b84febb5dcf6a697eb2a0b.jpg" alt="food">
                 </div>
                 <div>
-                    <p class="red">Dinner</p>
+                    <p class="red m-0">Dinner</p>
                 </div>
                 <div>
-                    <h1 class="fs-3">Homemade Macaroni and Cheese Mix</h1>
+                    <p style="font-family: var(--main-font);" >Homemade Macaroni and Cheese Mix</p>
                 </div>
                 <div class="d-flex justify-content-between">
                     <div class="d-flex">
                         <i class="fa fa-clock-o" style="font-size:24px"></i>
                         <p class="inline-block px-2" style="color: #666;">20 mins</p>
-                    </div>
-                    <div>
-                        <i class="fa fa-star-o" style="font-size:24px"></i>
-                        <i class="fa fa-star-o" style="font-size:24px"></i>
-                        <i class="fa fa-star-o" style="font-size:24px"></i>
-                        <i class="fa fa-star-o" style="font-size:24px"></i>
-                        <i class="fa fa-star-o" style="font-size:24px"></i>
                     </div>
                 </div>
                 
