--- a/front/src/app/component/recipes/recipes.component.html
+++ b/front/src/app/component/recipes/recipes.component.html
@@ -1,5 +1,5 @@
 <section>
-    <div class="w-50 m-auto pink-div" >
+    <div class="w-50 m-auto green-div" >
         <div>
             <h1 class="text-center">All Recipes</h1>
         </div>
