--- a/front/src/app/component/recipes/recipes.component.html
+++ b/front/src/app/component/recipes/recipes.component.html
@@ -1,35 +1,27 @@
 <section>
-    <div class="w-50 m-auto green-div" >
-        <div>
-            <h1 class="text-center">All Recipes</h1>
-        </div>
-        <div>
-            <p class="text-center fw-bold">Food brings us together, We make it easy to create delicious moments. Every great meal begins with a single recipe, let’s find yours!</p>
-        </div>
+    <div class="w-50 m-auto green-div p-4" >
+       <div class="border border-light p-4">
+         <div>
+             <h1 class="text-center">All Recipes</h1>
+         </div>
+         <div>
+             <p class="text-center">Food brings us together, We make it easy to create delicious moments. Every great meal begins with a single recipe, let’s find yours!</p>
+         </div>
+       </div>
     </div>
 </section>
-<!-- <section class="m-3">
-    <div class="container w-50 mt-5 rounded" >
-        <div class="p-2">
-            <h5 style="font-family: var(--main-font); font-weight: 600;">sub Categories</h5>
-        </div>
-        <div  class="d-flex justify-content-center p-2 w-100">
-            <h6 class="p-2 bg-light m-2 rounded"*ngFor="let item of items; let i = index" style="color: #de5d83;">recipes</h6>
-        </div>
-    </div>
-</section> -->
-<section class="m-3">
+<section class="mt-3 mb-3">
     <div class=" row d-flex justify-content-center align-items-center smaller-div">
-        <div class=" col-lg-2 col-md-3 col-sm-12 background py-2 px-5 mx-2 smaller-div d-flex flex-column  justify-content-center align-items-center">
+        <div class=" col-lg-3 col-md-3 col-sm-12 background py-2 px-5 mx-2 smaller-div d-flex flex-column  justify-content-center align-items-center">
 
             <img src="assets/img/croissant.png" alt="BreakFast"  class="img-fluid">
             <a href="#" class="text-decoration-none fs-5 color p-1 m-1 align-middle">BreakFast</a>
         </div>
-        <div class=" col-lg-2 col-md-3 col-sm-12 background py-2 px-5 mx-2 smaller-div d-flex flex-column  justify-content-center align-items-center">
+        <div class=" col-lg-3 col-md-3 col-sm-12 background py-2 px-5 mx-2 smaller-div d-flex flex-column  justify-content-center align-items-center">
             <img src="assets/img/salad.png" alt="Lunch"  class="img-fluid">
             <a href="#" class="text-decoration-none fs-5 color p-1 m-1 align-middle">Lunch</a>
         </div>
-        <div class="col-lg-2 col-md-3 col-sm-12 background py-2 px-5 mx-2  smaller-div d-flex flex-column  justify-content-center align-items-center">
+        <div class="col-lg-3 col-md-3 col-sm-12 background py-2 px-5 mx-2  smaller-div d-flex flex-column  justify-content-center align-items-center">
             <img src="assets/img/dinner.png" alt="Dinner"  class="img-fluid">
             <a href="#" class="text-decoration-none fs-5 color p-1 m-1 align-middle">Dinner</a>
         </div>
