--- a/front/src/app/component/single-recipe/single-recipe.component.css
+++ b/front/src/app/component/single-recipe/single-recipe.component.css
@@ -11,8 +11,8 @@ h1,h2,h3,h4,h5,p{
 /* recipe hero ========================= */
 .recipe-title{
   font-family: var(--main-font);
-  font-size: 60px;
-  font-weight: bold;
+  font-size: 36px;
+  font-weight: bolder;
   color: var(--main-color);
   text-transform: capitalize;
 }
@@ -23,10 +23,16 @@ h1,h2,h3,h4,h5,p{
   font-size: 14px;
 }
 
+@media (width < 1100px) {
+  .recipe-title {
+    font-size: 22px;
+  }
+}
+
 /* recipe how to ========================= */
 .how-to .title {
   font-family: var(--main-font);
-  font-size: 18px;
+  font-size: 28px;
   font-weight: 800;
 }
 
@@ -35,18 +41,26 @@ h1,h2,h3,h4,h5,p{
   font-size: 16px;
 }
 
+@media (width < 1100px) {
+  .how-to .title {
+    font-size: 20px;
+  }
+}
+
 /* related recipes ========================= */
 .related-recipes .title{
   font-family: var(--main-font);
-  font-size: 28px;
+  font-size: 32px;
   font-weight: 800;
 }
-
-/* .related-recipes .body .card-wrapper {
-  width: 10px;
-} */
 
 .related-recipes .card-title{
   font-size: 16px;
   font-family: var(--main-font);
+}
+
+@media (width < 1100px) {
+  .related-recipes .title {
+    font-size: 22px;
+  }
 }
