--- a/front/src/app/component/login/login.component.css
+++ b/front/src/app/component/login/login.component.css
@@ -1,14 +1,6 @@
 
-#check{
-    display: none;
-}
-
-label{
-    color: #fff;
-    font-size: 25px;
-    font-weight: bold;
-    cursor: pointer;
-    transition: .5s ease-in-out;
+.main.signin{
+    height: 450px;
 }
 
 input{
@@ -22,29 +14,10 @@ input{
     border-radius: 5px;
 }
 
-.form-group {
-    justify-content: center;
-    gap: 20px;
-}
-
-/* Checkbox */
-.form-check {
-    flex-direction: column;
-    display: flex;
-    align-items: center; 
-}
-
-.form-check-input {
-    margin-left: 10px;
-    padding: 15px;
-    width: 5px;
-}
-
-/*  */
 button{
     width: 45%;
     height: 56px;
-    margin: auto;
+    margin: 35px auto;
     justify-content: center;
     background: #573b8a;
     font-size: 25px;
@@ -52,8 +25,12 @@ button{
     border: none;
     border-radius: 8px;
     transition: .2s ease-in;
+    display: flex;
+    color: white;
+    align-items: center;
 }
 
 button:hover{
     background: #6d44b8;
 }
+
