--- a/front/src/app/component/register/register.component.html
+++ b/front/src/app/component/register/register.component.html
@@ -1,8 +1,7 @@
 <section class="banner">
     <div class="container mt-5">
         <div class="main">
-            <input type="checkbox" id="check" aria-hidden="true">
-            <h1 for="check">Sign Up</h1>
+            <h1>Sign Up</h1>
         
             <div class="signup">
                 <form [formGroup]="registerForm" (ngSubmit)="registerSender()" class="pt-1 ps-4">
@@ -67,7 +66,7 @@
                     <!-- DoB -->
                     <div class="form-group">
                         <!-- <label for="exampleInputUserName">Date Of Birth</label> -->
-                        <input type="date" class="form-control" id="exampleInputDoB" formControlName="DoB" style="padding: 0 10px;">
+                        <input type="date" class="form-control" id="exampleInputDoB" formControlName="DoB" style="padding: 0 10px; height: 35px;">
                     </div>
                     @if (registerForm.controls['DoB'].errors?.['required'] && registerForm.controls['DoB'].touched) {
                         <small id="DoBHelp" class="form-text text-danger">Please enter your date of birth.</small>
