--- a/front/src/styles.css
+++ b/front/src/styles.css
@@ -26,3 +26,44 @@ h1{
 p{
   font-family: var(--second-font);
 }
+
+/* Login & Register */
+
+.banner{
+  display: flex;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.2),rgba(0, 0, 0, 0.2));
+  height: 100vh;  
+}
+
+.container{
+  display: flex;
+  justify-content: center;
+  padding: 55px;
+}
+
+.main{
+  width: 500px;
+  height: 670px;
+  overflow: hidden;
+  background-image: url(/assets/imgs/login2.jpg);
+  background-position: center;
+  background-size: cover;
+  border-radius: 20px;
+  box-shadow: 7px 25px 50px #000;
+}
+
+.main h1{
+  text-align: center;
+  color: white;
+  padding-top: 18px;
+  font-size: 55px;
+}
+
+.form-group{
+  display: flex;
+  align-items: center;
+}
+
+
+
+
