--- a/front/src/app/component/recipes/recipes.component.html
+++ b/front/src/app/component/recipes/recipes.component.html
@@ -100,20 +100,20 @@
 <section >
     <div class="container d-flex flex-column w-80">
         <div class="row gx-3 mt-3">
-            <div class="col-lg-3 col-md-6 col-sm-12 white " *ngFor="let item of items; let i = index">
-                <div class=" inline-block  ">
-                    <img class="w-100  rounded-image" src="https://www.simplyrecipes.com/thmb/AgGSd6GxVsW9D8fmNSWyRjLApQU=/300x225/filters:no_upscale():max_bytes(150000):strip_icc()/Simply-Recipes-DIY-Macaroni-Cheese-LEAD-02-0fc3a4f066b84febb5dcf6a697eb2a0b.jpg" alt="food">
+            <div class="col-lg-3 col-md-6 col-sm-12 white " *ngFor="let item of recipeList; let i = index">
+                <div  >
+                    <img class=" rounded-image" style="width: 100% !important; height: 330px !important;" [src]="item.image" alt="food">
                 </div>
                 <div>
-                    <p class="red m-0">Dinner</p>
+                    <p class="red m-0">{{item.category}}</p>
                 </div>
                 <div >
-                   <h5>Homemade Macaroni and Cheese Mix</h5>
+                   <h5>{{item.name}}</h5>
                 </div>
                 <div class="d-flex justify-content-between">
                     <div class="d-flex">
                         <i class="fa fa-clock-o" style="font-size:24px"></i>
-                        <p class="inline-block px-2" style="color: #666;">20 mins</p>
+                        <p class="inline-block px-2" style="color: #666;">{{item.time}} mins</p>
                     </div>
                 </div>
                 
