--- a/front/src/app/component/home/home.component.css
+++ b/front/src/app/component/home/home.component.css
@@ -274,16 +274,20 @@ body{
 }
 
 /* Categories Section */
-.box,.smallBox{
+.categories .row .col-lg-3:nth-child(3) img {
+    height: 438px;
+}
+
+.box,.smallBox,.latestContent{
     transition: all 0.3s;
 }
 
-.box:hover,.smallBox:hover  {
+.box:hover,.smallBox:hover,.latestContent:hover{
     opacity: 0.6;
 }
 
 .box .categoryName{
-    background-color: var(--boxCategory-color);
+    background-color: var(--main-color);
     width: fit-content;
     padding: 6px 25px;
     position: absolute;
@@ -293,7 +297,7 @@ body{
 
 .box .categoryName h5{
     font-size: 20px;
-    color: var(--main-color);
+    color: var(--third-color);
     font-family: var(--main-font);
     text-transform: uppercase;
 }
@@ -305,7 +309,7 @@ body{
 }
 
 .smallBox .categoryName h5{
-    color: var(--btn-color);
+    color: var(--main-color);
     text-transform: uppercase;
     font-weight: 600;
     font-family: var(--second-font);
@@ -331,6 +335,11 @@ body{
 .allLatest:hover p{
     transform: translateX(-5px);
 }
+
+.latestContent a{
+    text-decoration: none;
+}
+
 .latestContent h5{
     font-family: var(--titleReciepe-font);
     font-weight: 600;
