--- a/front/src/app/component/footer/footer.component.html
+++ b/front/src/app/component/footer/footer.component.html
@@ -1,84 +1,91 @@
+
 <footer class="footer p-5">
     <div class="container">
         <div class="row">
-            <div class="col-lg-8 row1 d-flex">
-                    <img src="assets/imgs/logo.png" alt="" class="w-75 me-4">
-                    <div class="footerTitle">
-                        <h1 class="heading">Small Budget? Big Flavor!</h1>
-                        <p class="w-75">
-                            Cooking on a budget doesn’t have to be boring. Welcome to a world of mouthwatering recipes crafted to suit your daily routine and 
-                            budget-friendly meals!
-                        </p>
+            <!-- Logo and Introduction -->
+            <div class="col-lg-8 col-md-12 logoContent d-flex flex-column flex-md-row align-items-start">
+                <img src="assets/imgs/logo.png" alt="" class="w-100 me-4 mb-3 mb-md-0">
+                <div class="footerTitle">
+                    <h1 class="heading">Small Budget? Big Flavor!</h1>
+                    <p class="w-100">
+                        Cooking on a budget doesn’t have to be boring. Welcome to a world of mouthwatering recipes crafted to suit your daily routine and 
+                        budget-friendly meals!
+                    </p>
+                </div>
+            </div>
+
+            <div class="menus col-lg-4">
+                <!-- Recipes Menu -->
+                <div class="menu-column ">
+                    <h1 class="heading">Recipes</h1>
+                    
+                    <div class="footer-menu-wrap mt-2">
+                        <ul id="menu-footer-1" class="menu menu--footer">
+                            <li id="menu-item-70689" class="menu-item">
+                                <a href="#">
+                                    <span>Recipes</span>
+                                </a>
+                            </li>
+                            <li id="menu-item-70690" class="menu-item">
+                                <a href="#">
+                                    <span>How-To</span>
+                                </a>
+                            </li>
+                            <li id="menu-item-70691" class="menu-item">
+                                <a href="#">
+                                    <span>Kitchen Basics</span>
+                                </a>
+                            </li>
+                            <li id="menu-item-70692" class="menu-item">
+                                <a href="#">
+                                    <span>Pantry Staples</span>
+                                </a>
+                            </li>
+                            <li id="menu-item-70693" class="menu-item">
+                                <a href="#">
+                                    <span>Extra Bytes</span>
+                                </a>
+                            </li>
+                        </ul>
                     </div>
-            </div>
-
-            <div class="col-lg-2 menu-column ">
-                <h1 class="heading">Recipes</h1>
-                
-                <div class="footer-menu-wrap mt-2">
-                    <ul id="menu-footer-1" class="menu menu--footer">
-                        <li id="menu-item-70689" class="menu-item">
-                            <a href="#">
-                                <span>Recipes</span>
-                            </a>
-                        </li>
-                        <li id="menu-item-70690" class="menu-item">
-                            <a href="#">
-                                <span>How-To</span>
-                            </a>
-                        </li>
-                        <li id="menu-item-70691" class="menu-item">
-                            <a href="#">
-                                <span>Kitchen Basics</span>
-                            </a>
-                        </li>
-                        <li id="menu-item-70692" class="menu-item">
-                            <a href="#">
-                                <span>Pantry Staples</span>
-                            </a>
-                        </li>
-                        <li id="menu-item-70693" class="menu-item">
-                            <a href="#">
-                                <span>Extra Bytes</span>
-                            </a>
-                        </li>
-                    </ul>
+                </div>
+    
+                <!-- About Menu -->
+                <div class="menu-column ">
+                    <h1 class="heading">About</h1>
+                    
+                    <div class="footer-menu-wrap mt-2">
+                        <ul id="menu-footer-1" class="menu menu--footer">
+                            <li id="menu-item-70689" class="menu-item">
+                                <a href="#">
+                                    <span>About</span>
+                                </a>
+                            </li>
+                            <li id="menu-item-70690" class="menu-item">
+                                <a href="#">
+                                    <span>FAQ</span>
+                                </a>
+                            </li>
+                            <li id="menu-item-70691" class="menu-item">
+                                <a href="#">
+                                    <span>Contact</span>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </div>
 
-            <div class="col-lg-2 menu-column ">
-                <h1 class="heading">About</h1>
-                
-                <div class="footer-menu-wrap mt-2">
-                    <ul id="menu-footer-1" class="menu menu--footer">
-                        <li id="menu-item-70689" class="menu-item">
-                            <a href="#">
-                                <span>About</span>
-                            </a>
-                        </li>
-                        <li id="menu-item-70690" class="menu-item">
-                            <a href="#">
-                                <span>FAQ</span>
-                            </a>
-                        </li>
-                        <li id="menu-item-70691" class="menu-item">
-                            <a href="#">
-                                <span>Contact</span>
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-
+            <!-- Footer Bottom Section -->
             <div class="row footer-bottom mt-5 mb-5">
-                <div class="col-lg-8 col-md-8 m-0 mt-4">
+                <div class="col-lg-8 col-md-7 m-0 mt-4">
                     Copyright ©2024 All rights reserved | This template is made with 
                     <i class="fa-solid fa-heart color" ></i>
                     by
                     <span class="color">MDR</span>
                 </div>
 
-                <div class="col-lg-4 col-md-4 footer-social mt-4">
+                <div class="col-lg-4 col-md-5 footer-social mt-4">
 					<a href="#">
 						<i class="fa-brands fa-facebook-f"></i>
 					</a>
