--- a/front/src/app/component/home/home.component.css
+++ b/front/src/app/component/home/home.component.css
@@ -45,7 +45,7 @@ body{
     transition: all 300ms linear 0s;
     text-transform: capitalize;
     box-shadow: -10px 10px 40px var(--boxShadow-color);
-    margin-top: 30px;
+    margin: 30px auto 0;
     max-width: 200px;
     text-decoration: none;
 }
@@ -360,10 +360,7 @@ body{
     font-size: 18px;
     color: var(--second-color);
 }
-.main-btn.viewAll {
-    position: relative;
-    left: 40%;
-}
+
 
 /* Video Section */
 video {
@@ -391,6 +388,10 @@ video {
 }
 
 /* users */
+.user{
+    margin-bottom: 40px;
+}
+
 .borderSection{
     border: 1px solid #fff;
     padding: 26px;
@@ -400,10 +401,67 @@ video {
     color: #fff;
 }
 
-.breakerContent h1{
+.userImg{
+    margin-left: 40px;
+}
+
+.userContent{
+    margin-left: 25px;
+}
+
+.user h1{
     font-size: 40px;
 }
-.breakerContent p{
+.user p{
     font-size: 21px;
     color: #eee;
 }
+
+@media (max-width: 480px) {
+    .user{
+        margin-bottom: 0px;
+    }
+    .user h1{
+        font-size: 40px;
+    }
+    .user p{
+        font-size: 17px;
+    }
+}
+
+@media (max-width: 768px) {
+    
+    .borderSection{
+        border: none;
+        display: block;
+    }
+    .userImg{
+        margin-left: 0;
+    }
+    .userContent{
+        margin-bottom: 20px;
+        margin-left: 0;
+    }
+    .user h1{
+        font-size: 40px;
+    }
+    .user p{
+        font-size: 16px;
+    }
+}
+
+@media (max-width: 991px) {
+    .menus{
+        display: flex;
+        justify-content: start;
+        gap: 80px;
+        margin-top: 20px;
+    }
+    .footer .heading {
+        font-size: 36px;
+    }
+    .user p{
+        font-size: 16px;
+    }
+}
+
