--- a/front/src/app/component/home/home.component.html
+++ b/front/src/app/component/home/home.component.html
@@ -114,7 +114,7 @@
                 </div>
             }
         </div>
-        <a class="main-btn viewAll" href="#">View All Latest</a>
+        <a class="main-btn" href="#">View All Latest</a>
     </div>
 </section>
 
@@ -170,7 +170,7 @@
                     </div>
                 </div>
             }
-            <a class="main-btn viewAll" href="#">View All Recipes</a>
+            <a class="main-btn" href="#">View All Recipes</a>
         </div>
     </div>
 </section>
