--- a/front/src/app/component/home/home.component.css
+++ b/front/src/app/component/home/home.component.css
@@ -277,6 +277,7 @@ body{
 /* Categories Section */
 .categories .row .col-lg-3:nth-child(3) img {
     height: 438px;
+    width: 100%;
 }
 
 .box,.smallBox,.latestContent{
@@ -317,13 +318,76 @@ body{
     margin-top: 18px;
     font-size: 18px;    
 }
+
+@media (max-width: 1024px) {
+    .categories .row .col-lg-3:nth-child(3) img{
+        height: 310px;
+    }
+
+    .box .categoryName {
+        left: 24%;
+    }
+
+    .box .categoryName h5 {
+        font-size: 18px; 
+    }
+
+    .smallBox .categoryName h5 {
+        font-size: 16px;
+    }
+}
+
+@media (max-width: 768px) {
+    .categories .row .col-lg-3:nth-child(3) img{
+        height: 480px;
+    }
+    .box{
+        margin-bottom: 35px;
+    }
+    .box .categoryName {
+        left: 35%;
+        bottom: -4%;
+    }
+    .box .categoryName h5 {
+        font-size: 18px;
+    }
+
+    .smallBox .categoryName h5 {
+        font-size: 15px;
+        margin-top: 10px;
+    }
+
+    .smallBox img {
+        height: 5rem;
+    }
+}
+
+@media (max-width: 576px) {
+    .box .categoryName {
+        left: 40%;
+        bottom: -2%;
+    }
+
+    .box .categoryName h5 {
+        font-size: 18px;
+    }
+
+    .smallBox img {
+        height: 4rem;
+    }
+
+    .smallBox .categoryName h5 {
+        font-size: 12px;
+    }
+}
+
 @media (max-width: 480px) {
-    .categories .box{
-        text-align: center;
+    .box{
         margin-bottom: 40px;
     }
-    img {
-        width: 300px;
+    .box .categoryName {
+        left: 37%;
+        bottom: -3%;
     }
 }
 /* Latest Section */
@@ -361,7 +425,7 @@ body{
     color: var(--second-color);
 }
 
-@media (max-width: 768px) {
+@media (max-width: 767px) {
     .main-btn{
         margin: 10px 0;
     }
