--- a/front/src/app/component/home/home.component.html
+++ b/front/src/app/component/home/home.component.html
@@ -10,7 +10,7 @@
                         our site serves up a diverse menu of global flavors, step-by-step guides, and handy cooking tips. Let's cook up something amazing, 
                         one recipe at a time!
                     </p>
-                    <a class="main-btn shadow" href="#categories">Let's Discover</a>
+                    <a class="main-btn hero shadow" href="#categories">Let's Discover</a>
                 </div>
             </div>
             <div class="col-lg-6">
@@ -35,7 +35,7 @@
 </section>
 
 <!-- Top Dish Area Section -->
-<section class="top-dish-area">
+<section class="top-dish-area" id="categories">
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
@@ -54,7 +54,7 @@
 </section>
 
 <!-- Categories Section -->
-<section class="categories" id="categories">
+<section class="categories">
     <div class="container">
         <div class="row">
             @for (category of categories; track $index) {
@@ -114,7 +114,7 @@
                 </div>
             }
         </div>
-        <a class="main-btn" href="#">View All Latest</a>
+        <a class="main-btn recipe" href="#">View All Latest</a>
     </div>
 </section>
 
@@ -170,7 +170,7 @@
                     </div>
                 </div>
             }
-            <a class="main-btn" href="#">View All Recipes</a>
+            <a class="main-btn recipe" href="#">View All Recipes</a>
         </div>
     </div>
 </section>
