--- a/front/src/app/component/profile/profile.component.html
+++ b/front/src/app/component/profile/profile.component.html
@@ -1,27 +1,53 @@
-<div class="container">
-  <section class="user-details d-flex justify-content-between">
+<div class="container mt-5">
+  <section class="user-details d-flex justify-content-between align-items-center">
     <h1><span class="fw-bold text-capitalize">hello</span> Momen</h1>
-    <a href="#">edit your details</a>
+    <a routerLink="/profile/edit-profile" class="text-capitalize text-bold text-decoration-none btn btn-dark btn-sm px-lg-3 py-lg-2">edit your info</a>
   </section>
-  <section class="favorite-recipes">
+  <section class="recipes-wrapper mt-5">
     <div class="title">
       <h1 class="fw-bold text-capitalize">favorite recipes</h1>
     </div>
-    <!-- <div *ngFor="let recipe of ingredient?.recipes" > -->
-    <div
-      class="card border-0"
-      style="width: 300px; cursor: pointer"
-      (click)="onRecipeClick(recipe.id)"
-    >
-      <img
-        class="rounded card-img-top w-100"
-        src="{{ recipe?.image }}"
-        alt="Title"
-      />
-      <div class="card-body">
-        <h4 class="card-title">{{ recipe?.name }}</h4>
+    <div class="body mt-4 d-flex gap-3 overflow-x-scroll">
+      <div *ngFor="let recipe of recipes">
+        <div
+          class="card border-0"
+          style="width: 300px; cursor: pointer"
+          (click)="onRecipeClick(recipe.id)"
+        >
+          <img
+            class="rounded card-img-top w-100 cover"
+            src="{{ recipe?.image }}"
+            alt="Title"
+          />
+          <div class="card-body">
+            <h1 class="card-title h4">{{ recipe?.name }}</h1>
+          </div>
+        </div>
       </div>
     </div>
-    <!-- </div> -->
+  </section>
+  <section class="recipes-wrapper mt-5">
+    <div class="title d-flex justify-content-between align-items-center">
+      <h1 class="fw-bold text-capitalize">your recipes</h1>
+      <a routerLink="/profile/add-recipe" class="text-capitalize text-bold text-decoration-none btn btn-dark btn-sm px-lg-3 py-lg-2">add recipe</a>
+    </div>
+    <div class="body mt-4 d-flex gap-3 overflow-x-scroll">
+      <div *ngFor="let recipe of recipes">
+        <div
+          class="card border-0"
+          style="width: 300px; cursor: pointer"
+          (click)="onRecipeClick(recipe.id)"
+        >
+          <img
+            class="rounded card-img-top w-100"
+            src="{{ recipe?.image }}"
+            alt="Title"
+          />
+          <div class="card-body">
+            <h1 class="card-title h4">{{ recipe?.name }}</h1>
+          </div>
+        </div>
+      </div>
+    </div>
   </section>
 </div>
