--- a/front/src/app/component/navbar/navbar.component.html
+++ b/front/src/app/component/navbar/navbar.component.html
@@ -1,1 +1,38 @@
-<p>navbar works!</p>
+<nav class="navbar">
+  <div class="logo">
+    <img src="assets/image/logo.png" alt="Logo">
+  </div>
+
+  <!-- Search Bar -->
+  <div class="search-bar">
+    <input class="form-control" type="search" placeholder="Search" aria-label="Search">
+    <img  class="searchicon" src="assets/image/search.svg" alt="Search">
+  </div>
+
+  <ul class="nav-links">
+    <li>
+      <a href="#">
+        <img src="assets/image/home.svg" alt="All Recipes Icon">
+        <span>home</span>
+      </a>
+    </li>
+    <li>
+      <a href="#">
+        <img src="assets/image/recipes.svg" alt="Bread Icon">
+        <span>recipes</span>
+      </a>
+    </li>
+    <li>
+      <a routerLink="/about">
+        <img src="assets/image/about-us.svg" alt="Breakfast Icon">
+        <span>about</span>
+      </a>
+    </li>
+    <li>
+      <a href="#">
+        <img src="assets/image/profile.svg" alt="Cakes Icon">
+        <span>profile</span>
+      </a>
+    </li>
+  </ul>
+</nav>
