--- a/front/src/app/component/about/about.component.css
+++ b/front/src/app/component/about/about.component.css
@@ -1,58 +1,48 @@
-.about-container {
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 20px;
-  }
-  
-  .about-header {
-    text-align: center;
-    margin-bottom: 30px;
-  }
-  
-  .about-header h1 {
-    font-size: 2.5rem;
-    color: #ff6347;
-  }
-  
-  .about-content {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: center;
-  }
-  
-  .about-image {
-    flex: 1;
-    max-width: 500px;
-    margin-right: 30px;
-  }
-  
-  .about-image img {
-    width: 100%;
-    height: auto;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  }
-  
-  .about-text {
-    flex: 2;
-  }
-  
-  .about-text h2 {
-    font-size: 2rem;
-    margin-bottom: 20px;
-    color: #333;
-  }
-  
-  .about-text p {
-    font-size: 1.2rem;
-    line-height: 1.6;
-    color: #666;
-  }
-  
-  .about-text h3 {
-    font-size: 1.5rem;
-    margin-top: 20px;
-    color: #ff6347;
-  }
-  
+.team-section {
+  text-align: center;
+  color: black;
+  max-width: 1200px;
+  margin: auto;
+  padding: 20px;
+  background-color: white;
+}
+
+.team-member {
+  display: flex;
+  align-items: center;
+  color: white;
+  background-color: white;
+  padding: 20px;
+  border: none; /* Remove borders */
+  box-shadow: none; /* Remove shadows */
+  margin: 0; /* Remove any margins between rectangles */
+  border-radius: 0; /* Ensure no border radius */
+}
+
+.member-photo {
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  margin-right: 20px;
+  border: 2px solid var(--main-color); /* Keeps the border for the photo */
+}
+
+.member-info h3 {
+  text-align:left;
+  margin: 0;
+  font-size: 20px;
+  color: var(--main-color);
+}
+
+.member-info h4 {
+  text-align:left;
+  margin: 0;
+  color: var(--second-color);
+  font-size: 16px;
+}
+
+.member-info p {
+  text-align: left;
+  font-size: 14px;
+  color: black;
+}
