--- a/front/src/app/component/single-recipe/single-recipe.component.css
+++ b/front/src/app/component/single-recipe/single-recipe.component.css
@@ -32,13 +32,21 @@ h1,h2,h3,h4,h5,p{
 /* recipe how to ========================= */
 .how-to .title {
   font-family: var(--main-font);
+  color: var(--main-color);
   font-size: 28px;
   font-weight: 800;
 }
 
 .how-to .body{
   font-family: var(--second-font);
+  color: var(--main-color);
   font-size: 16px;
+  list-style: none;
+  padding: 0;
+}
+
+.how-to .body i {
+  color: var(--main-color);
 }
 
 @media (width < 1100px) {
@@ -50,12 +58,14 @@ h1,h2,h3,h4,h5,p{
 /* related recipes ========================= */
 .related-recipes .title{
   font-family: var(--main-font);
+  color: var(--main-color);
   font-size: 32px;
   font-weight: 800;
 }
 
 .related-recipes .card-title{
-  font-size: 16px;
+  font-size: 24px;
+  color: var(--main-color);
   font-family: var(--main-font);
 }
 
