changed href in navbar links to routerlinks and added valid routes

--- a/front/src/app/component/navbar/navbar.component.html
+++ b/front/src/app/component/navbar/navbar.component.html
@@ -11,13 +11,13 @@
 
   <ul class="nav-links">
     <li>
-      <a href="#">
+      <a routerLink="/">
         <img src="assets/image/home.svg" alt="All Recipes Icon">
         <span>home</span>
       </a>
     </li>
     <li>
-      <a href="#">
+      <a routerLink="/recipes">
         <img src="assets/image/recipes.svg" alt="Bread Icon">
         <span>recipes</span>
       </a>
@@ -29,7 +29,7 @@
       </a>
     </li>
     <li>
-      <a href="#">
+      <a routerLink="/profile">
         <img src="assets/image/profile.svg" alt="Cakes Icon">
         <span>profile</span>
       </a>
